JVMのチューニング fixes #174
git-svn-id: http://svn.l1j.org/l1j/trunk@122 698199e4-35c4-443b-82c4-7f4b4ae73c13