@@ -1,2 +1,2 @@
 #!/bin/bash
-java -Xmx512m -Xincgc -jar l1jserver.jar
+java -XX:PermSize=256m -XX:MaxPermSize=256m -Xms1024m -Xmx1024m -jar l1jserver.jar
